--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,1 +1,9 @@
 @import "./NavBar.scss";
+@import "./Home.scss";
+@import "./Committee.scss";
+@import "./Events.scss";
+@import "./Links.scss";
+@import "./Membership.scss";
+@import "./Photos.scss";
+@import "./Training.scss";
+@import "./Login.scss";
