--- a/src/sass/Committee.scss
+++ b/src/sass/Committee.scss
@@ -9,25 +9,35 @@
   ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
+    margin: 20px 150px;
+  }
 
-    li {
-      margin-bottom: 20px;
+  li {
+    margin-bottom: 20px;
 
-      ul {
-        border: 1px solid #ccc;
-        padding: 10px;
-        border-radius: 5px;
+    ul {
+      border: 1px solid #ccc;
+      padding: 10px;
+      border-radius: 5px;
 
-        li {
-          font-weight: bold;
-          margin-bottom: 5px;
-        }
+      li {
+        margin-bottom: 5px;
       }
     }
   }
 
   p {
-    color: red;
     font-size: 1.2rem;
+  }
+
+  @media (max-width: 768px) {
+    ul {
+      margin: 20px 20px;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
   }
 }
