--- a/src/sass/Events.scss
+++ b/src/sass/Events.scss
@@ -1,63 +1,45 @@
-.events-list {
-  list-style-type: none;
-  padding: 0;
+.events-page {
+  padding: 20px;
 
-  li {
-    display: flex;
-    justify-content: center;
+  h1 {
+    font-size: 2.5rem;
     margin-bottom: 20px;
   }
 
+  .events-list {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+    margin: 20px 150px;
+  }
+
   .event-box {
-    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    padding: 10px;
     border-radius: 5px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    width: calc(33.33% - 20px);
-    margin: 10px;
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    margin-bottom: 20px;
   }
 
-  .event-details {
-    text-align: left;
-    margin: 0;
+  .event-details ul {
+    list-style: none;
+    padding: 0;
+  }
 
-    h2 {
-      font-size: 1.2rem;
-      margin-top: 0;
+  .event-details li {
+    margin-bottom: 10px;
+  }
+
+  p {
+    font-size: 1.2rem;
+  }
+
+  @media (max-width: 768px) {
+    .events-list {
+      margin: 20px 20px;
     }
 
-    p {
-      font-size: 1rem;
-      margin: 0;
-      margin-bottom: 8px;
+    .event-box {
+      margin-bottom: 10px;
     }
-  }
-
-  .event-box:hover {
-    transform: translate(0, -5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.events-page.loading p {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.events-page.error p {
-  color: red;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.events-page h1 {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-@media (max-width: 768px) {
-  .event-box {
-    width: calc(50% - 20px);
   }
 }
