--- a/src/sass/Photos.scss
+++ b/src/sass/Photos.scss
@@ -1,3 +1,7 @@
+h1 {
+  text-align: center;
+}
+
 .photo-list {
   list-style-type: none;
   padding: 0;
@@ -16,7 +20,7 @@
       border: 1px solid #ccc;
       border-radius: 5px;
       width: 100%;
-      height: 200px;
+      height: 100%;
       margin: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
