--- a/src/sass/Committee.scss
+++ b/src/sass/Committee.scss
@@ -11,19 +11,22 @@
     padding: 0;
     text-align: center;
     margin: 20px 150px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
   }
 
   li {
     margin-bottom: 20px;
+  }
 
-    ul {
-      border: 1px solid #ccc;
-      padding: 10px;
-      border-radius: 5px;
+  ul ul {
+    border: none;
+    padding: 0;
+    margin: 0;
 
-      li {
-        margin-bottom: 5px;
-      }
+    li {
+      margin-bottom: 5px;
     }
   }
 
