--- a/src/sass/Links.scss
+++ b/src/sass/Links.scss
@@ -24,6 +24,9 @@
   text-decoration: none;
   transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out,
     color 0.3s ease-in-out;
+  min-width: 200px;
+  text-align: center;
+  word-wrap: break-word;
 }
 
 .links-container a:hover {
@@ -36,5 +39,11 @@
   .links-container {
     flex-direction: column;
     align-items: center;
+  }
+
+  .links-container a {
+    width: 100%;
+    max-width: 300px;
+    margin: 10px auto;
   }
 }
