--- a/src/sass/Membership.scss
+++ b/src/sass/Membership.scss
@@ -11,12 +11,13 @@
 .membership-page p {
   font-size: 1.1rem;
   line-height: 1.6;
-  color: #666;
-  margin: 50px;
+  // color: #666;
+  margin: 20px 50px;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  background-color: #f5f5f5;
+  text-align: center;
+  // box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  // background-color: #f5f5f5;
 }
 
 @media (max-width: 768px) {
