--- a/src/sass/Links.scss
+++ b/src/sass/Links.scss
@@ -2,10 +2,11 @@
   padding: 20px;
 }
 
-.links-page h1 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
+h1 {
+  font-size: 45px;
+  margin: 10px;
+  color: green;
+  padding: 10px;
 }
 
 .links-container {
