--- a/src/sass/Membership.scss
+++ b/src/sass/Membership.scss
@@ -2,22 +2,33 @@
   padding: 20px;
 }
 
-.membership-page h1 {
-  text-align: center;
-  margin-bottom: 20px;
-  color: #333;
+h1 {
+  font-size: 45px;
+  margin: 10px;
+  color: green;
+  padding: 10px;
 }
 
-.membership-page p {
+p {
   font-size: 1.1rem;
   line-height: 1.6;
-  // color: #666;
-  margin: 20px 50px;
-  padding: 20px;
-  border-radius: 5px;
+  padding-bottom: 20px;
   text-align: center;
-  // box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  // background-color: #f5f5f5;
+}
+
+.membership-info {
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+  margin: 20px 100px;
+  padding: 30px;
+  border-radius: 5px;
+
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 60%;
+    height: auto;
+  }
 }
 
 @media (max-width: 768px) {
