--- a/src/sass/Training.scss
+++ b/src/sass/Training.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(https://www.heraldtribune.com/gcdn/authoring/2011/06/12/NSHT/ghows-LK-1a8658a1-c23b-44f7-94ad-1bf8ca0bf225-1266da3e.jpeg?width=660&height=498&fit=crop&format=pjpg&auto=webp),
+  background-image: url(../assets/GroupPicIndoor.jpg),
     url(https://www.akc.org/wp-content/uploads/2022/10/German-Shepherd-Dog-standing-up-on-a-tree-trunk-exploring-a-park-500x486.jpg);
   background-repeat: no-repeat;
   background-position: left, right top;
