--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 20px;
   text-align: center;
-  background-image: url(https://media.istockphoto.com/id/109718537/photo/german-shepherd-jumping-over-spring.jpg?s=612x612&w=0&k=20&c=hpC1J8YEYSbbhqxUlqkr9pt1pm0zlv6BrHQAzQFZaJ8=),
+  background-image: url(../assets/GroupPicIndoor.jpg),
     url(https://media.istockphoto.com/id/537739045/photo/schaeferhund-runs.jpg?s=612x612&w=0&k=20&c=9JIp0nE5QVe0djE_FOEWU1pd39JrUVZi2Nz8vemdl7E=);
   background-position: left, right top;
   background-repeat: no-repeat;
