--- a/src/sass/Membership.scss
+++ b/src/sass/Membership.scss
@@ -1,5 +1,12 @@
 .membership-page {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url(../src/assets/FadedDragon.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 80%;
 }
 
 h1 {
