--- a/src/sass/Events.scss
+++ b/src/sass/Events.scss
@@ -1,9 +1,12 @@
 .events-page {
   padding: 20px;
-  // background-image: url(https://www.heraldtribune.com/gcdn/authoring/2011/06/12/NSHT/ghows-LK-1a8658a1-c23b-44f7-94ad-1bf8ca0bf225-1266da3e.jpeg?width=660&height=498&fit=crop&format=pjpg&auto=webp),
-  //   url(https://www.akc.org/wp-content/uploads/2022/10/German-Shepherd-Dog-standing-up-on-a-tree-trunk-exploring-a-park-500x486.jpg);
-  // background-repeat: no-repeat;
-  // background-position: left, right top;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background-image: url(../src/assets/FadedDragon.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 80%;
 
   h1 {
     font-size: 45px;
@@ -33,7 +36,7 @@
     padding: 10px;
     border-radius: 5px;
     margin: 10px 30px;
-    background-color: #fcfbfbf7;
+    background-color: #fcfbfb;
   }
 
   .col-md-4 {
