--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   padding: 20px;
   text-align: center;
   background-image: url(../assets/GroupPicIndoor.jpg),
