--- a/src/sass/Committee.scss
+++ b/src/sass/Committee.scss
@@ -54,6 +54,11 @@ h1 {
   background-color: #fcfbfb;
 }
 
+.committee-title {
+  font-weight: bold;
+  font-size: 18px;
+}
+
 @media (min-width: 769px) {
   .committee-content {
     margin: 0 300px;
