--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -36,3 +36,10 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   background-color: #fcfbfbf6;
 }
+
+@media (max-width: 768px) {
+  .about-us {
+    font-size: 1rem;
+    margin: 10px;
+  }
+}
